Separate Sematic part and Code gen part from main.c Signed-off-by: pw1316 <of19950402@gmail.com>

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,4 +1,4 @@
-objects = main.o scan.o parse.o util.o
+objects = main.o scan.o parse.o util.o sematic.o code.o
 
 all:	pascal
 
@@ -11,17 +11,23 @@ pascal:	$(objects)
 main.o: main.c
 	gcc -c main.c -o main.o
 
-scan.o:	scan.c
+scan.o:	scan.c scan.h
 	gcc -c scan.c -o scan.o
 
 scan.c: pascal.l pascal.tab.h
 	flex -o scan.c pascal.l
 
-parse.o: pascal.tab.c
+parse.o: pascal.tab.c parse.h
 	gcc -c pascal.tab.c -o parse.o 
 
 pascal.tab.c pascal.tab.h: pascal.y
 	yacc -d -b pascal -v pascal.y
 
-util.o: util.c
+sematic.o: sematic.c sematic.h
+	gcc -c sematic.c -o sematic.o
+
+code.o: code.c code.h
+	gcc -c code.c -o code.o
+
+util.o: util.c util.h
 	gcc -c util.c -o util.o
